app/assets/stylesheets/dome.scss
/* ... */
.dome-course-list-wrapper {
    width: 80%;
    margin: 10px auto;
}

.course-item {
    width: 300px;
    height: 310px;
    float: left;
    position: relative;
}

.dome-course-list a {
    display: block;
    margin-left: 10px;
    margin-right: 10px;
}

.course-item-img-wrapper {
    border-radius: 21px;
    background-color: #DDF2F6;
    padding: 10px;
    height: 250px;
    vertical-align: middle;
    height: 100%;
}

.dome-course-list .course-item-name {
    margin-top: 10px;
    padding: 2px 20px;
    background-color: #7EDAED;
    border-radius: 39px;
    font-size: 18px;
    color: #FFFFFF;
    letter-spacing: 2.08px;
}

hr.dome-courses {
    border-top: 1px solid #B8E986;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 50px;
}

hr.dome-courses:after {
    content: '豆姆课例';
    display: inline-block;
    position: relative;
    top: -14px;
    padding: 0 20px;
    background: #fff;
    color: #B8E986;
    font-size: 24px;
}

.course-head {
    padding: 50px 30px;
    width: 80%;
    height: 320px;
    background-image: linear-gradient(-129deg, #FDFDFD 0%, #FCFCFC 43%, #E5E5E5 100%);
    border: 8px solid #182A87;
    border-radius: 18px;
}

.stars span {
    color: #E95E21;
}

.stars-wrapper {
    padding: 10px 0;
    border-top: 4px solid #182A87;
    border-bottom: 4px solid #182A87;
    width: 90%;
    overflow: hidden;
}

.stars-wrapper ul {
    padding: 10px;
}

.stars-wrapper li {
    width: 50%;
    height: 30px;
    float: left;
    position: relative;
}

.lesson-list {
    margin: 30px auto;
    text-align: center;
    width: 80%;
}

.lesson-list li {
    float: left;
    width: 30%;
    margin-bottom: 30px;
}

.lesson-list li div {
    margin-top: 10px;
}

.btn-lesson-item {
    background-color: #182A87;
    border-radius: 40px;
    color: #FFF;
}

.course-info {
    text-align: center;
    margin: 20px auto;
    width: 70%;
}

#lesson-test-outer {
    border: 1px solid #B7DEE5;
    background-color: #B7DEE5;
    border-radius: 20px;
    padding: 30px 40px;
}

#lesson-test-inner {
    border: 1px solid #FFF;
    background-color: #FFF;
    border-radius: 20px;
    padding: 30px 40px;
}

#lesson-test-inner .question {
    font-size: 20px;
    letter-spacing: 2.32px;
    line-height: 28px;
}

#lesson-test-inner label {
    font-size: 12px;
    letter-spacing: 1.39px;
    line-height: 17px;
    font-weight: normal;
    margin-left: 30px;
}

#lesson-test-inner hr {
    border-width: 3px;
}

#user-lesson-test-submit {
    border: 2px solid #182A87;
    margin-top: 30px;
    border-radius: 5px;
    background-color: white;
    padding: 3px 30px;
    font-size: 18px;
}

h1.lesson-name {
    color: #182A87;
}

h7.lesson-name {
    font-size: 24px;
    color: #FFA178;
    letter-spacing: 0.77px;
    line-height: 33px;
}

#test-result {
    margin-top: 50px;
}

#test-result-container p {
    font-size: 18px;
    letter-spacing: 0.58px;
    color: #9B9B9B;
    margin-bottom: 10px;
}

#test-teacher-wrapper {
    background: image-url("test-result-bg.png") no-repeat center center;
    height: 272px;
    width: 975px;
}
// scheduler

.container-fluid #scheduler_here {
    height: 760px;
    width: 700px;
    overflow: visible;
}

.scheduler-wrapper {
    height: 900px;
    width: 740px;
    margin: 50px auto;
    background: #fff6f2;
}

.dhx_cal_data.dhx_resize_denied.dhx_move_denied {
    top: 116px !important;
    height: 100% !important;
    overflow: hidden;
}

#scheduler_here .dhx_cal_navline .dhx_cal_date {
    text-align: left;
    font-size: 30px;
    color: #9B9B9B;
    font-weight: normal;
}

#scheduler_here .dhx_month_head {
    text-align: left;
}

.dhx_cal_navline .month-list li {
    float: left;
    margin-left: 22px;
}

.dhx_cal_navline .month-list {
    position: absolute;
    top: 30px;
    left: 130px;
}

.dhx_cal_navline .month-list a {
    color: #9B9B9B;
    font-size: 12px;
    cursor: pointer;
}

.dhx_cal_navline .month-list .selected {
    color: orange;
}

#scheduler_here .dhx_cal_event_clear {
    height: 80%;
}

#scheduler_here .dhx_cal_event_clear div {
    border-radius: 4px;
    text-align: center;
    margin-top: 10px;
    font-size: 12px;
}

#scheduler_here .dhx_cal_event_clear .course {
    color: #4A90E2;
    background: #C1D6F4;
    border: 1px solid #4A90E2;
    padding: 0 10px;
    white-space: normal;
    max-height: 3em;
    word-wrap: break-word;
    overflow: hidden;
}

#scheduler_here .dhx_cal_event_clear .lesson {
    color: #E67F97;
    background: #FFD5DF;
    padding: 0 10px;
    border: 1px solid #E67F97;
}

#scheduler_here {
    background-color: #fff6f2;
}

#scheduler_here .dhx_cal_navline {
    border-bottom: 2px solid #D8D8D8;
    width: 740px !important;
    height: 49px !important;
    left: -20px !important;
}

#scheduler_here .dhx_cal_header .dhx_scale_bar {
    background-color: #D8D8D8;
    color: #FFFFFF;
    font-size: 14px;
    border-color: #D8D8D8;
    line-height: 30px;
    text-transform: uppercase;
}

#scheduler_here .dhx_cal_data {
    border: none;
}

#scheduler_here tr div {
    border-width: 2px;
    border-color: #D8D8D8;
}

#scheduler_here tr td:last-child div {
    border-right: none;
}

#scheduler_here tr:last-child div {
    border-bottom: none;
}

#scheduler_here .dhx_cal_header {
    width: 740px !important;
    left: -20px !important;
    top: 55px !important;
    background: #D8D8D8;
}

.dhx_month_head div {
    position: relative;
    top: 10px;
    left: 10px;
    width: 25px;
    height: 25px;
    text-align: center;
    line-height: 25px;
    font-size: 18px;
    color: #9B9B9B;
}

.dhx_month_head .hasLesson {
    color: white;
    border-radius: 30px;
    background-color: #f5a623;
}
/* ... */

